--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -26,4 +26,16 @@ authors="FaNaTiK_IceZ"
     side="BOTH"
 
 
+[[dependencies.rubin]]
+    modId="just_enough_items-1.16.5"
+    mandatory=false
+    versionRange="[0,)"
+    ordering="NONE"
+    side="BOTH"
+[[dependencies.rubin]]
+    modId="just_enough_items"
+    mandatory=false
+    versionRange="[0,)"
+    ordering="NONE"
+    side="BOTH"
 
